@@ -15,9 +15,20 @@ p.version {text-align: center}
 html { background-color: #e7e7e7; }
 
 body {
-   max-width: 74.92em;
+   max-width: 75em;
    margin: 0 auto;
    padding: .5em 1em 1em 1em; 
    background-color: white;
    border: .1em solid #c0c0c0;
 }
+
+pre {
+   padding: .8em 1.2em;
+   margin: 1em 0 1em 3% ;
+   -webkit-border-radius: .3em;
+   -moz-border-radius: .3em;
+   border-radius: .3em;
+   border: 1px solid #d4cbb6;
+   background-color: #f2efe4;
+}
+
