@@ -1,3 +1,8 @@
+2018-04-05         Manuel Collado       <m-collado@users.sourceforge.net>
+
+	* makeweb-md.sh: Reduce margins of PDF documents generated by pandoc.
+	* gawkextlib.css: Boxed <pre> elements.
+
 2018-03-16         Manuel Collado       <m-collado@users.sourceforge.net>
 
 	* makeweb.awk (include_text): Escape reserved chars. Do not reflow
